// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrandProvider component renders correctly 1`] = `
<div
  class=""
  data-testid="brand-colors-provider"
>
  hi
</div>
`;

exports[`BrandProvider component renders correctly with brand  1`] = `
<div
  class="BrandRed"
  data-testid="brand-colors-provider"
>
  hi
</div>
`;
